# ecdsafail-challenge

./: .gitignore  Cargo.toml  HANDOVER_1050_TO_1045.md  HANDOVER_1050_TO_1046.md  PZ1050_TOFFOLI_REDUCTION_HANDOFF.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.note  autoresearch.retrospective.md  benchmark.json  program.md  results.tsv
src/: circuit.rs  main.rs  point_add.rs  sim.rs  weierstrass_elliptic_curve.rs
src/point_add/: blockers_and_paths.md  builder.rs  by.rs  by_sota_architecture.md  coset_proto.md  creative_attempts_log.md  dialog_gcd_classical_filter.rs  divstep_dialog.rs  emit.rs  fermat_inv.rs  halfgcd_coeff_decoder.rs  halfgcd_live_pa.rs  kaliski_classical_replay.rs  kaliski_equiv.rs  kaliski_jump.rs  kaliski_jump_extra.rs  kaliski_linear_transform.rs  kaliski_pair1_forward_end_findings.md  kaliski_state.rs  kaliski_walk.rs  kim_costs.md  kim_inv_circuit.rs  kim_proto.rs  lit_tricks.md  luo_compact_inv_plan.md  luo_proto.rs  microbench.rs  mod.rs  modular.rs  mul_affine.rs  point_add.rs  primitive_costs.rs  qubit_target_analysis.md  research_notes.md  round125_jsf.rs  round158_halfgcd_splice_live.rs  round185_halfgcd_fixed_depth64_pa.rs  round218_b5_program.rs  round218_b5_selector.rs  round218_b5_transport.rs  (+14 more)
src/point_add/arith/: adder.rs  compare.rs  config.rs  const_arith.rs  mod.rs  modular.rs  multiply.rs  nbit.rs  registers.rs  shift_ctrl.rs  util.rs
src/point_add/kaliski/: mod.rs  step.rs
src/point_add/memory/: 2026-06-02-a16-schedule-margin7-reroll4.md  2026-06-02-cswap-floor-analysis.md  (+11 more)
(+51 files in other folders)
